@@ -1,2 +1,6 @@
 [easy_install]
 index_url = http://dist.repoze.org/lemonade/dev/simple
+
+[nosetests]
+match=^test
+nocapture=1
